admin part finished 3.0